[tool.poetry]
name = "mauritius-phone-number-generator"
version = "0.1.0"
description = ""
authors = ["Bruno Bernard <contact.brunobernard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
